# url_shortner

./: Dockerfile  README.md  env.example  main.py  pyproject.toml
config/: __init__.py  db.py
core/: __init__.py  url_logic.py
templates/: base.html
templates/pages/: analytics.html  home.html
utils/: __init__.py  env_provider.py  extract_request_detail.py
